# sensors

./: .gitignore  CMakeLists.txt  DOCUMENTATION.md  Kconfig  README.md  prj.conf
boards/: esp32_devkitc_wroom.overlay  esp32c3_devkitm_ready_led.overlay  esp32c6_devkitc_ready_led.conf  rpi_pico_w.overlay
doc/: Doxyfile  esp32.fzz  esp32_ky40.fzz
include/: adc.h  button.h  gpio_led.h  ky40.h  low_power.h  meteorology.h  motion_sensor.h  pwmled.h  ready_led.h  rfid.h  sensors_logging.h  sevensegment.h  stripled.h
patches/zephyr/: 00_prico_w_ready_led.patch
src/: adc.c  button.c  gpio_led.c  ky40.c  low_power.c  meteorology.c  motion_sensor.c  pwmled.c  ready_led.c  sensor_log.c  sevensegment.c  stripled.c
zephyr/: module.yml
